Error message on the index page when email not found

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,15 @@
 </head>
 <body>
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
+    <p>
+        {% if message %}
+            {{ message }}
+        {% endif %}
+    </p>
     Please enter your secretary email to continue:
-    <form action="showSummary" method="post">
+    <form action="showSummary" method="POST">
         <label for="email">Email:</label>
-        <input type="email" name="email" id=""/>
+        <input type="email" name="email" id="email"/>
         <button type="submit">Enter</button>
     </form>
 </body>
