--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -24,7 +24,7 @@
             Date: {{comp['date']}}</br>
             Number of Places: {{comp['numberOfPlaces']}}
             {%if comp['numberOfPlaces']|int >0%}
-            <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}">Book Places</a>
+            <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}" {% if comp['date'] < current_date %} hidden {% endif %} >Book Places</a>
             {%endif%}
         </li>
         <hr />
