--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GUDLFT Registration</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
     <p>
         {% if message %}
@@ -17,5 +12,4 @@
         <input type="email" name="email" id="email"/>
         <button type="submit">Enter</button>
     </form>
-</body>
-</html>
+{% endblock %}
