Points Dispay Board

--- a/templates/clubs.html
+++ b/templates/clubs.html
@@ -25,6 +25,7 @@
                 </tbody>
             </table>
         </div>
+        <a href="/">Registration Portal</a>
     </div>
 </div>
 {% endblock %}
