--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Welcome to the GUDLFT Registration Portal!</h1>
-    <p>
-        {% if message %}
-            {{ message }}
-        {% endif %}
-    </p>
-    Please enter your secretary email to continue:
-    <form action="showSummary" method="POST">
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email"/>
-        <button type="submit">Enter</button>
-    </form>
+<div class="container text-center">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <div class="row mx-5">
+                <h1 class="my-5 text-info">Welcome to the GUDLFT Registration Portal!</h1>
+                <p>
+                    {% if message %}
+                        {{ message }}
+                    {% endif %}
+                </p>
+                <p>Please enter your secretary email to continue:</p>
+                <form action="showSummary" method="POST">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email"/>
+                    <button type="submit">Enter</button>
+                </form>
+                <a href="/points-display">Points Display Board</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
