--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,36 +1,38 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary | GUDLFT Registration</title>
-</head>
-<body>
-        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
+{% extends 'base.html' %}
 
-    {% with messages = get_flashed_messages()%}
-    {% if messages %}
-        <ul>
-       {% for message in messages %}
-            <li>{{message}}</li>
-        {% endfor %}
-       </ul>
-    {% endif%}
-    Points available: {{club['points']}}
-    <h3>Competitions:</h3>
-    <ul>
-        {% for comp in competitions%}
-        <li>
-            {{comp['name']}}<br />
-            Date: {{comp['date']}}</br>
-            Number of Places: {{comp['numberOfPlaces']}}
-            {%if comp['numberOfPlaces']|int >0%}
-            <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}" {% if comp['date'] < current_date %} hidden {% endif %} >Book Places</a>
-            {%endif%}
-        </li>
-        <hr />
-        {% endfor %}
-    </ul>
-    {%endwith%}
-
-</body>
-</html>
+{% block content %}
+<div class="container text-center">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <div class="row mx-5">
+                <h2 class="text-info">Welcome, {{club['email']}} </h2>
+                <a href="{{url_for('logout')}}">Logout</a>
+                {% with messages = get_flashed_messages()%}
+                {% if messages %}
+                    <ul class="list-unstyled">
+                   {% for message in messages %}
+                        <li>{{message}}</li>
+                    {% endfor %}
+                   </ul>
+                {% endif%}
+                <p>Points available: {{club['points']}}</p>
+                <h3>Competitions:</h3>
+                <ul>
+                    {% for comp in competitions%}
+                    <li>
+                        {{comp['name']}}<br />
+                        Date: {{comp['date']}}</br>
+                        Number of Places: {{comp['numberOfPlaces']}}
+                        {%if comp['numberOfPlaces']|int >0%}
+                        <a href="{{ url_for('book',competition=comp['name'],club=club['name']) }}" {% if comp['date'] < current_date %} hidden {% endif %} >Book Places</a>
+                        {%endif%}
+                    </li>
+                    <hr />
+                    {% endfor %}
+                </ul>
+                {%endwith%}
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
